# drop2beets

./: .gitignore  README.md  beets_inotify.py  drop2beets.py  install_service.sh  pyproject.toml  setup.py
beetsplug/: drop2beets.py
examples/: custom_tag.py  force_genre_and_language_by_folder.py  force_genre_by_folder.py  skip_missing_title_or_artist.py
tests/: test_drop2beets.py
